<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task Reminder</string>
    <string name="edit_reminder_title">Task Reminder</string>
    <string name="no_reminders">Belum Ada Kegiatan</string>
    <string name="menu_insert">Tambah Kegiatan</string>
    <string name="menu_delete">Hapus Kegiatan</string>
  	<string name="menu_settings">Settings</string>
    <string name="title">Nama Kegiatan</string>
    <string name="body">Kegiatan Anda</string>
    <string name="confirm">Simpan</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Tanggal Kegiatan</string>
    <string name="time">Waktu Kegiatan</string>
    
    <!-- Toasts -->
    <string name="task_saved_message">Kegiatan berhasil disimpan</string>
    
    <!-- Notification Bar -->
    <string name="notify_new_task_message">Cek Kegiatan</string>
    <string name="notify_new_task_title">Silahkan cek kegiatan anda</string>
    
    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
	<string name="pref_category_task_defaults_title">Task Title Default</string>
	<string name="pref_task_title_key">default_reminder_title</string>
	<string name="pref_task_title_dialog_title">Default Reminder Title</string>
	<string name="pref_task_title_message">The default title for a reminder.</string>
	<string name="pref_task_title_summary">Default title for reminders.</string>
	<string name="pref_task_title_title">Default Reminder Title</string>
    
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
	<string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
	<string name="pref_default_time_from_now_title">Default Reminder Time</string>
	
</resources>
